<resources>
    <string name="app_name">NesThermostat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dev_mail">chatelard.valentin@gmail.com</string>
    <string name="icon_description">Logo</string>
    <string name="programmation">Programmation</string>
    <string name="room">Chambre</string>
    <string name="home">Maison</string>
    <string name="statistics">Statistiques</string>
    <string name="admin_drawer">Administration</string>
    <string name="parameters">Paramètres</string>
    <string name="admin_name">Administrateur</string>
</resources>
